tests/rosetta/out/Swift/active-directory-connect.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:54:30Z
struct LDAPClient: Equatable {
    var Base: String
    var Host: String
    var Port: Int
    var UseSSL: Bool
    var BindDN: String
    var BindPassword: String
    var UserFilter: String
    var GroupFilter: String
    var Attributes: [String]
}
func connect(_ client: inout LDAPClient) -> Bool {
    return client.Host != "" && client.Port > 0
}
func main() {
    let client = LDAPClient(Base: "dc=example,dc=com", Host: "ldap.example.com", Port: 389, UseSSL: false, BindDN: "uid=readonlyuser,ou=People,dc=example,dc=com", BindPassword: "readonlypassword", UserFilter: "(uid=%s)", GroupFilter: "(memberUid=%s)", Attributes: ["givenName", "sn", "mail", "uid"])
    if connect(&client) {
        print("Connected to " + client.Host)
    }
    else {
        print("Failed to connect")
    }
}
main()
